# fastapi

./: .gitignore  pyproject.toml  requirements.txt
