[project]
name = "chess-api"
version = "0.1.0"
requires-python = ">=3.12.9"
dependencies = [
  "attrs==25.4.0",
  "autopep8==2.3.2",
  "cattrs==26.1.0",
  "certifi==2026.2.25",
  "charset-normalizer==3.4.4",
  "chess==1.11.2",
  "chessboard-image==1.1.5",
  "cython==3.2.4",
  "fastapi==0.135.1",
  "fastjsonschema==2.21.2",
  "idna==3.11",
  "ipywidgets==8.1.8",
  "jupyterlab==4.5.5",
  "matplotlib==3.10.8",
  "numpy==2.4.2",
  "opencv-python==4.13.0.92",
  "pandas==3.0.1",
  "pillow==12.1.1",
  "pycodestyle==2.14.0",
  "pulp==3.3.0",
  "python-chess==1.999",
  "python-multipart==0.0.22",
  "requests==2.32.5",
  "scikit-learn==1.8.0",
  "seaborn==0.13.2",
  "torch==2.10.0",
  "torchinfo==1.8.0",
  "torchvision==0.25.0",
  "tqdm==4.67.3",
  "typing-extensions==4.15.0",
  "urllib3==2.6.3",
  "uvicorn==0.41.0",
  "zstandard==0.25.0"
]
